--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="fp-tablecell">
             <div class="page1">
                 <div class="nav wow zoomIn" data-wow-duration="2s">
-                    <h1>ZQ-Blog</h1>
+                    <h1>HYS-Blog</h1>
                     <p>只要朝着一个方向努力，一切都会变得得心应手</p>
                     <a class="layui-btn layui-btn-normal" style="margin-top: 20px" href="article.html">Enter Blog</a>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="warp-box">
                     <div class="about">
                         <div class="inner">
-                            <h1 class="wow fadeInLeft">ZQ个人博客</h1>
+                            <h1 class="wow fadeInLeft">HYS个人博客</h1>
                             <p class="wow fadeInRight">                         
                                    一天很短，开心了就笑，不开心了就过会儿再笑。
                             </p>
@@ -208,7 +208,7 @@
             <div class="container">
                 <div class="layui-row">
                     <div class="layui-col-xs12 layui-col-sm12 layui-col-md12 text-center">
-                        <p>Copyright &copy; 2019-2020 ZQ个人博客 All Rights Reserved V.5.1.3 粤ICP备1231100号</p>
+                        <p>Copyright &copy; 2019-2020 HYS个人博客 All Rights Reserved V.5.1.3 粤ICP备1231100号</p>
                     </div>
                 </div>
             </div>
