--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="layui-col-xs12 layui-col-sm4 layui-col-md4  wow fadeInUp" style="padding: 0 10px">
                             <div class="single-news">
                                 <div class="news-head">
-                                    <img src="http://www.lzqcode.com/images/java.jpg">
+                                    <img src="http://www.lHYScode.com/images/java.jpg">
                                     <a href="#" class="link"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="news-content">
@@ -171,7 +171,7 @@
                     <div class="layui-col-xs12 layui-col-sm6 layui-col-md4">
                         <div class="single-widget about">
                             <div class="footer-logo">
-                                <h2>ZQ个人博客</h2>
+                                <h2>HYS个人博客</h2>
                             </div>
                             <p>世界那么大，我想去看看</p>
                             <div class="button">
