--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="layui-col-xs12 layui-col-sm4 layui-col-md4  wow fadeInUp" style="padding: 0 10px">
                             <div class="single-news">
                                 <div class="news-head">
-                                    <img src="http://www.lHYScode.com/images/java.jpg">
+                                    <img src="http://www.lZQcode.com/images/java.jpg">
                                     <a href="#" class="link"><i class="fa fa-link"></i></a>
                                 </div>
                                 <div class="news-content">
