--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
                                 <div class="news-content">
                                     <h4>
                                         <a href="#">
-                                            DeDeCMS专栏
+                                            Unity专栏
                                         </a>
                                     </h4>
                                     <div class="date">
                                         2020年6月16日
                                     </div>
                                     <p>
-                                       本栏目主要介绍DeDeCMS网站内容管理系统，使用dede常见的问题，常用标签，插件，提供建站帮助
+                                       本栏目主要介绍Unity。
                                     </p>
                                     <a href="#" class="btn">
                                         阅读更多 
