--- a/article.html
+++ b/article.html
@@ -51,7 +51,7 @@
 							<div class="fc-flag">置顶</div>   
 							<h5 class="title">       
 								<span class="fc-blue">【原创】</span>       
-								<a href="read.html">Java基础知识</a>   
+								<a href="read_java_0.html">Java基础知识</a>   
 							</h5>   
 							<div class="time">       
 								<span class="day">1</span>       
@@ -64,7 +64,7 @@
 								</a>
 								这篇文章是为了介绍自己自学Java基础知识部分过程中所学到的重点知识：如String、容器、异常、多线程、以及Jvm等相关重点知识							</div>   
 							<div class="read-more">       
-								<a href="read.html" class="fc-black f-fwb">继续阅读</a>   
+								<a href="read_java_1.html" class="fc-black f-fwb">继续阅读</a>   
 							</div>    
 							<aside class="f-oh footer">       
 								<div class="f-fl tags">           
@@ -87,7 +87,7 @@
 							<div class="fc-flag">置顶</div>   
 							<h5 class="title">       
 								<span class="fc-blue">【原创】</span>       
-								<a href="read.html">Java学习路线推荐</a>   
+								<a href="read_java_3.html">Java学习路线推荐</a>   
 							</h5>   
 							<div class="time">       
 								<span class="day">1</span>       
